Create graph for number of messages in simple control plane.

--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -592,6 +592,16 @@ the regions as the algorithm for region creation is reused. This can be
 inefficient as well, and it is then for the transition to happen, a copy of the
 whole underlying system at epoch $i$ should be replicated in each new region of
 epoch $i+1$.
+
+
+%% TODO FIT
+\begin{figure}[!h] 
+\centering
+\includegraphics[width=350pt]{figures/messages-plot}
+\caption{Growth of the number of messages for one epoch with the number of nodes.}
+\label{fig:messages-plot}
+\end{figure}
+
  
 \subsubsection{Omniscience of the Nodes}
 Nodes are actually aware of a lot of information. By design they are aware of
