Add code for graph of storage.

--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -602,6 +602,15 @@ epoch $i+1$.
 \label{fig:messages-plot}
 \end{figure}
 
+
+%% TODO FIT
+\begin{figure}[!h] 
+\centering
+\includegraphics[width=350pt]{figures/storage-plot}
+\caption{Growth of the number of storage for ping distances for one epoch with respect to the number of nodes.}
+\label{fig:storage-plot}
+\end{figure}
+
  
 \subsubsection{Omniscience of the Nodes}
 Nodes are actually aware of a lot of information. By design they are aware of
